--- a/data/create_csv_data_sets.ipynb
+++ b/data/create_csv_data_sets.ipynb
@@ -29,6 +29,7 @@
     "- The `weather` data also as a `time_hour` column which **\"appears\"** to combine the `year`, `month`, `day` and `hour` column information into a single field, but the hour field does not match the `time_hour` **hour** portion. The offset appears to be exactly 8 hours which would seem to indicate the UTC +8 hour offset was used. In all likelihood the `time_hour` column is the UTC value and the remaining time fields are local time. This makes a huge difference when trying to compare flight data with the weather data. \n",
     "\n",
     "**Weather data**\n",
+    "\n",
     "|   year |   month |   hour | time_hour           |\n",
     "|-------:|--------:|-------:|:--------------------|\n",
     "|   2022 |       1 |      0 | 2022-01-01 08:00:00 |\n",
@@ -43,6 +44,7 @@
     "|   2022 |       1 |      9 | 2022-01-01 17:00:00 |\n",
     "\n",
     "**Flights data**\n",
+    "\n",
     "|   year |   month |   hour | time_hour           |\n",
     "|-------:|--------:|-------:|:--------------------|\n",
     "|   2022 |       1 |     23 | 2022-01-01 23:00:00 |\n",
@@ -55,6 +57,15 @@
     "|   2022 |       1 |     22 | 2022-01-01 22:00:00 |\n",
     "|   2022 |       1 |     23 | 2022-01-01 23:00:00 |\n",
     "|   2022 |       1 |     23 | 2022-01-01 23:00:00 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Summary**\n",
+    "- Successfully recreated the csv files with the same missing values, rows and columns. Recreated CSV files stored in the `output` directory with `_recreated.csv` suffixes.\n",
+    "- Reported an [issue](https://github.com/moderndive/pnwflights22/issues/1) with the Moderndive pnwflights22 data files."
    ]
   },
   {
